returned past members

--- a/index.html
+++ b/index.html
@@ -316,87 +316,85 @@
                     </li>
 
                     <!--<li class="timeline-inverted">-->
-                        <!--<div class="timeline-image">-->
-                            <!--<img class="img-circle img-responsive" src="img/portfolio/award.png" alt="">-->
-                        <!--</div>-->
-                        <!--<div class="timeline-panel">-->
-                            <!--<div class="timeline-heading">-->
+                    <!--<div class="timeline-image">-->
+                    <!--<img class="img-circle img-responsive" src="img/portfolio/award.png" alt="">-->
+                    <!--</div>-->
+                    <!--<div class="timeline-panel">-->
+                    <!--<div class="timeline-heading">-->
 
-                                <!--<h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/cornell-tech-professor-of-computer-science-named-2017-ieee-internet-award"> Deborah-->
-                                    <!--Estrin named 2017 IEEE Internet Award Recipient</a></h4>-->
-                                <!--<h6>Deborah Estrin</h6>-->
-                                <!--CornellTech Website, June, 2016-->
-                                <!--&lt;!&ndash;Cornell Tech Website, June, 2017&ndash;&gt;-->
-                            <!--</div>-->
-                            <!--<div class="timeline-body">-->
-                                <!--<p class="text-muted">Deborah Estrin, Professor of Computer Science at Cornell Tech and Professor of Public Health at Weill Cornell, has been named the 2017 IEEE-->
-                                    <!--Internet Award Recipient. Sponsored by the Nokia Corporation, the award is given for exceptional contributions to the advancement of Internet technology.-->
-                                    <!--Specifically, Estrin was selected for “formative contributions and thought leadership in Internet routing and in mobile sensing techniques and applications, from-->
-                                    <!--environmental monitoring to personal and community health.” IEEE is the world’s largest technical professional organization dedicated to advancing technology for-->
-                                    <!--the benefit of humanity.</p>-->
+                    <!--<h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/cornell-tech-professor-of-computer-science-named-2017-ieee-internet-award"> Deborah-->
+                    <!--Estrin named 2017 IEEE Internet Award Recipient</a></h4>-->
+                    <!--<h6>Deborah Estrin</h6>-->
+                    <!--CornellTech Website, June, 2016-->
+                    <!--&lt;!&ndash;Cornell Tech Website, June, 2017&ndash;&gt;-->
+                    <!--</div>-->
+                    <!--<div class="timeline-body">-->
+                    <!--<p class="text-muted">Deborah Estrin, Professor of Computer Science at Cornell Tech and Professor of Public Health at Weill Cornell, has been named the 2017 IEEE-->
+                    <!--Internet Award Recipient. Sponsored by the Nokia Corporation, the award is given for exceptional contributions to the advancement of Internet technology.-->
+                    <!--Specifically, Estrin was selected for “formative contributions and thought leadership in Internet routing and in mobile sensing techniques and applications, from-->
+                    <!--environmental monitoring to personal and community health.” IEEE is the world’s largest technical professional organization dedicated to advancing technology for-->
+                    <!--the benefit of humanity.</p>-->
 
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</li>-->
 
 
-
-
                     <!--<li class="timeline-inverted">-->
-                        <!--<div class="timeline-image">-->
-                            <!--<img class="img-circle img-responsive" src="img/about/immerse.png" alt="">-->
-                        <!--</div>-->
-                        <!--<div class="timeline-panel">-->
-                            <!--<div class="timeline-heading">-->
+                    <!--<div class="timeline-image">-->
+                    <!--<img class="img-circle img-responsive" src="img/about/immerse.png" alt="">-->
+                    <!--</div>-->
+                    <!--<div class="timeline-panel">-->
+                    <!--<div class="timeline-heading">-->
 
-                                <!--<h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/aol-cornell-tech-connected-experiences-lab-pioneers-immersive-recommendatio">AOL-Cornell-->
-                                    <!--Tech Connected Experiences Lab Pioneers Immersive Recommendations Technology</a></h4>-->
-                                <!--<h6>small data lab</h6>-->
-                                <!--CornellTech Website, April, 2016-->
-                            <!--</div>-->
-                            <!--<div class="timeline-body">-->
-                                <!--<p class="text-muted">The Jacobs Technion-Cornell Institute at Cornell Tech and AOL today announced a research technology called “Immersive Recommendations,” a concept-->
-                                    <!--where a user opts in to a tool that translates personal digital traces from one platform into content recommendations in another. The new technique was developed by-->
-                                    <!--Cornell Tech researchers to address “the cold-start problem” — how to engage users with relevant content when they first start using a platform. As an example,-->
-                                    <!--could a service like Netflix suggest better movies for a first-time user, if it tapped into their Twitter data? Could Meetup.com use your Medium posts to tailor-->
-                                    <!--events for you? Researchers will present the the new paper at the 25th International World Wide Web Conference in Montreal, Canada.</p>-->
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--<h4 class="subheading"><a style="color: black" href="https://tech.cornell.edu/news/aol-cornell-tech-connected-experiences-lab-pioneers-immersive-recommendatio">AOL-Cornell-->
+                    <!--Tech Connected Experiences Lab Pioneers Immersive Recommendations Technology</a></h4>-->
+                    <!--<h6>small data lab</h6>-->
+                    <!--CornellTech Website, April, 2016-->
+                    <!--</div>-->
+                    <!--<div class="timeline-body">-->
+                    <!--<p class="text-muted">The Jacobs Technion-Cornell Institute at Cornell Tech and AOL today announced a research technology called “Immersive Recommendations,” a concept-->
+                    <!--where a user opts in to a tool that translates personal digital traces from one platform into content recommendations in another. The new technique was developed by-->
+                    <!--Cornell Tech researchers to address “the cold-start problem” — how to engage users with relevant content when they first start using a platform. As an example,-->
+                    <!--could a service like Netflix suggest better movies for a first-time user, if it tapped into their Twitter data? Could Meetup.com use your Medium posts to tailor-->
+                    <!--events for you? Researchers will present the the new paper at the 25th International World Wide Web Conference in Montreal, Canada.</p>-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</li>-->
                     <!--<li class="timeline-inverted">-->
-                        <!--<div class="timeline-image">-->
-                            <!--<img class="img-circle img-responsive" src="img/about/nme.png" alt="">-->
-                        <!--</div>-->
-                        <!--<div class="timeline-panel">-->
-                            <!--<div class="timeline-heading">-->
+                    <!--<div class="timeline-image">-->
+                    <!--<img class="img-circle img-responsive" src="img/about/nme.png" alt="">-->
+                    <!--</div>-->
+                    <!--<div class="timeline-panel">-->
+                    <!--<div class="timeline-heading">-->
 
-                                <!--<h4 class="subheading"><a style="color: black" href="https://cacm.acm.org/magazines/2014/4/173218-small-data-where-n-me/fulltext"> small data, where n = me</a></h4>-->
-                                <!--<h6>Deborah Estrin</h6>Communications of the ACM 2014-->
-                            <!--</div>-->
-                            <!--<div class="timeline-body">-->
-                                <!--<p class="text-muted">We hear a lot about how big data, smart devices, and all the '-omics' (for example, genomics, proteomics, metabolomics, and so forth) are going to-->
-                                    <!--transform medicine—and they will. But there is another force that is going to change the way we think about and practice health, and that is our small data—small-->
-                                    <!--data derived from our individual digital traces.</p>-->
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--<h4 class="subheading"><a style="color: black" href="https://cacm.acm.org/magazines/2014/4/173218-small-data-where-n-me/fulltext"> small data, where n = me</a></h4>-->
+                    <!--<h6>Deborah Estrin</h6>Communications of the ACM 2014-->
+                    <!--</div>-->
+                    <!--<div class="timeline-body">-->
+                    <!--<p class="text-muted">We hear a lot about how big data, smart devices, and all the '-omics' (for example, genomics, proteomics, metabolomics, and so forth) are going to-->
+                    <!--transform medicine—and they will. But there is another force that is going to change the way we think about and practice health, and that is our small data—small-->
+                    <!--data derived from our individual digital traces.</p>-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</li>-->
 
                     <!--<li class="timeline-inverted">-->
-                        <!--<div class="timeline-image">-->
-                            <!--<img class="img-circle img-responsive" src="img/about/ted.png" alt="">-->
-                        <!--</div>-->
-                        <!--<div class="timeline-panel">-->
-                            <!--<div class="timeline-heading">-->
-                                <!--<h4 class="subheading"><a style="color: black;" href="http://www.tedmed.com/talks/show?id=17762">What happens when each patient becomes their own “universe” of unique-->
-                                    <!--medical data?</a></h4>-->
-                                <!--<h6 class="subheading">Deborah Estrin</h6>TEDMED 2013-->
-                            <!--</div>-->
-                            <!--<div class="timeline-body">-->
-                                <!--<p class="text-muted">We leave a trail of digital data breadcrumbs as we go about our days. With access and good apps, we could make sense of this "small data" to help-->
-                                    <!--get a clearer picture of our personal health. Deborah Estrin, networked sensing pioneer, Professor of Computer Science at the new Cornell Tech campus in New York-->
-                                    <!--City and co-founder of the non-profit startup, Open mHealth, explains at TEDMED 2013.</p>-->
-                            <!--</div>-->
-                        <!--</div>-->
+                    <!--<div class="timeline-image">-->
+                    <!--<img class="img-circle img-responsive" src="img/about/ted.png" alt="">-->
+                    <!--</div>-->
+                    <!--<div class="timeline-panel">-->
+                    <!--<div class="timeline-heading">-->
+                    <!--<h4 class="subheading"><a style="color: black;" href="http://www.tedmed.com/talks/show?id=17762">What happens when each patient becomes their own “universe” of unique-->
+                    <!--medical data?</a></h4>-->
+                    <!--<h6 class="subheading">Deborah Estrin</h6>TEDMED 2013-->
+                    <!--</div>-->
+                    <!--<div class="timeline-body">-->
+                    <!--<p class="text-muted">We leave a trail of digital data breadcrumbs as we go about our days. With access and good apps, we could make sense of this "small data" to help-->
+                    <!--get a clearer picture of our personal health. Deborah Estrin, networked sensing pioneer, Professor of Computer Science at the new Cornell Tech campus in New York-->
+                    <!--City and co-founder of the non-profit startup, Open mHealth, explains at TEDMED 2013.</p>-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <!--</li>-->
 
 
@@ -410,8 +408,9 @@
                 </ul>
             </div>
             <div class="col-lg-4 col-sm-10">
-                        <a class="twitter-timeline" data-lang="en" data-height="800" data-theme="light" href="https://twitter.com/sdlcornelltech?ref_src=twsrc%5Etfw">Tweets by sdlcornelltech</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                    </div>
+                <a class="twitter-timeline" data-lang="en" data-height="800" data-theme="light" href="https://twitter.com/sdlcornelltech?ref_src=twsrc%5Etfw">Tweets by sdlcornelltech</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
     </div>
 </section>
@@ -501,6 +500,16 @@
                     <a href=""><img src="img/team/Pargol.jpg" class="img-responsive img-circle" alt=""></a>
                     <h4>Pargol Gheissari</h4>
                     <p class="text-muted">Intern</p>
+
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+                <div class="team-member">
+
+                    <a href="#pastmembers" class="portfolio-link" data-toggle="modal"><img src="img/team/past.png" class="img-responsive img-circle" alt=""></a>
+                    <h4>Past Members</h4>
+                    <p class="text-muted"></p>
 
                 </div>
             </div>
@@ -1334,7 +1343,7 @@
                     <div class="col-md-4 col-sm-6 portfolio-item">
                         <!--<a href="#beehive" class="portfolio-link" data-toggle="modal">-->
 
-                        <img src="img/portfolio/beehive_n.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/beehive_n.png" style="height: 240px;" class="img-responsive" alt="">
                         <!--</a>-->
                         <div class="portfolio-caption">
                             <h4>Beehive</h4>
@@ -1347,7 +1356,7 @@
                         <!--<a href="#pushcart" class="portfolio-link" data-toggle="modal">-->
 
 
-                        <img src="img/portfolio/pushcart_edit.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/pushcart_edit.png" style="height: 200px;" class="img-responsive" alt="">
 
                         <!--</a>-->
                         <div class="portfolio-caption">
@@ -1361,7 +1370,7 @@
                         <!--<a href="#limbr" class="portfolio-link" data-toggle="modal">-->
 
 
-                        <img src="img/portfolio/limbr_temp.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/limbr_temp.png" style="height: 200px;" class="img-responsive" alt="">
 
                         <!--</a>-->
                         <div class="portfolio-caption">
@@ -1390,6 +1399,42 @@
             </div>
             <div class="container">
                 <div class="row">
+
+                    <div class="col-sm-3">
+                        <div class="team-member">
+                            <a href=""><img style="height: 225px;" src="img/team/faisal-a.jpg" class="img-responsive img-circle" alt=""></a>
+                            <h4>Faisal Alquaddoomi</h4>
+                            <!--<p class="text-muted">PhD Student</p>-->
+                        </div>
+                    </div>
+
+                    <div class="col-sm-3">
+                        <div class="team-member">
+
+                            <a href=""><img style="height: 225px;" src="img/team/andy.png" class="img-responsive img-circle" alt=""></a>
+                            <h4>Chen-Kang Hsieh</h4>
+                            <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
+
+                        </div>
+                    </div>
+
+                    <div class="col-sm-3">
+                        <div class="team-member">
+
+                            <a href=""><img style="height: 225px;" src="img/team/jason.jpg" class="img-responsive img-circle" alt=""></a>
+                            <h4>Jason Waterman</h4>
+                            <!--<p class="text-muted">Visiting Professor</p>-->
+
+                        </div>
+                    </div>
+
+                    <div class="col-sm-3">
+                        <div class="team-member">
+                            <a href=""><img style="height: 225px;" src="img/team/matt.png" class="img-responsive img-circle" alt=""></a>
+                            <h4>Matthew Griffith</h4>
+                            <!--<p class="text-muted">Developer in residence</p>-->
+                        </div>
+                    </div>
 
                     <div class="col-sm-3">
                         <div class="team-member">
@@ -1428,15 +1473,7 @@
 
                         </div>
                     </div>
-                    <div class="col-sm-3">
-                        <div class="team-member">
 
-                            <a href=""><img style="height: 225px;" src="img/team/andy.png" class="img-responsive img-circle" alt=""></a>
-                            <h4>Chen-Kang Hsieh</h4>
-                            <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
-
-                        </div>
-                    </div>
                     <div class="col-sm-3">
                         <div class="team-member">
 
