added Andrea's profile, reformatted the team

--- a/index.html
+++ b/index.html
@@ -435,22 +435,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-3">
-                <div class="team-member">
-                    <a href="http://www.cs.cornell.edu/~fnokeke/"><img src="img/team/fabian.png" class="img-responsive img-circle" alt=""></a>
-                    <h4>Fabian Okeke</h4>
-                    <p class="text-muted">PhD Student</p>
 
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-member">
-                    <a href="http://www.cs.cornell.edu/~ylongqi/"><img src="img/team/longqi.jpg" class="img-responsive img-circle" alt=""></a>
-                    <h4>Longqi Yang</h4>
-                    <p class="text-muted">PhD Student</p>
-
-                </div>
-            </div>
             <div class="col-sm-3">
                 <div class="team-member">
                     <a href="https://twitter.com/hongyi_wen"><img src="img/team/hongyi.jpg" class="img-responsive img-circle" alt=""></a>
@@ -474,9 +459,18 @@
                     <a href="http://emtseng.me/"><img src="img/team/emily.png" class="img-responsive img-circle" alt=""></a>
                     <h4>Emily Tseng</h4>
                     <p class="text-muted">PhD Student</p>
-
                 </div>
             </div>
+
+            <div class="col-sm-3">
+                <div class="team-member">
+                    <a href="https://infosci.cornell.edu/content/cuadra"><img src="img/team/andrea.png" class="img-responsive img-circle" alt=""></a>
+                    <h4>Andrea Cuadra</h4>
+                    <p class="text-muted">PhD Student</p>
+                </div>
+            </div>
+
+
 
 
             <div class="col-sm-3">
@@ -1406,6 +1400,23 @@
             </div>
             <div class="container">
                 <div class="row">
+
+                    <div class="col-sm-3">
+                        <div class="team-member">
+                            <a href="http://www.cs.cornell.edu/~fnokeke/"><img src="img/team/fabian.png" class="img-responsive img-circle" alt=""></a>
+                            <h4>Fabian Okeke</h4>
+                            <p class="text-muted">PhD Student</p>
+
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="team-member">
+                            <a href="http://www.cs.cornell.edu/~ylongqi/"><img src="img/team/longqi.jpg" class="img-responsive img-circle" alt=""></a>
+                            <h4>Longqi Yang</h4>
+                            <p class="text-muted">PhD Student</p>
+
+                        </div>
+                    </div>
 
                     <div class="col-sm-3">
                         <div class="team-member">
